--- a/views/emails/baseEmail.pug
+++ b/views/emails/baseEmail.pug
@@ -35,7 +35,7 @@ html
                                     tbody
                                         tr
                                             td.content-block
-                                                span.apple-link Natours Inc, 123 Nowhere Road, San Francisco CA 99999
+                                                span.apple-link Natours Inc, Noida, India
                                                 br
                                                 |  Don't like these emails? 
                                                 a(href='#') Unsubscribe
